feat: modified middleware, and pkg folder
