# project-1/albertafriadii/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   domain.GetUser:
     properties:
@@ -17,6 +16,8 @@ definitions:
       password_2:
         minLength: 8
         type: string
+      user_id:
+        type: string
       username:
         type: string
     required:
@@ -29,6 +30,8 @@ definitions:
     properties:
       email:
         type: string
+      existing_password:
+        type: string
       password_1:
         type: string
       password_2:
@@ -38,7 +41,6 @@ definitions:
       username:
         type: string
     required:
-    - email
     - username
     type: object
   domain.Users:
@@ -71,16 +73,8 @@ definitions:
         description: Valid is true if Time is not NULL
         type: boolean
     type: object
-host: localhost:1323
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: a simple Go library management with echo framework
-  termsOfService: http://swagger.io/terms/
-  title: Go Echo Library Management
-  version: "1.0"
+  contact: {}
 paths:
   /user/:
     post:
@@ -153,12 +147,12 @@ paths:
       summary: Update user
       tags:
       - Update User
-  /user/get:
+  /user/login:
     get:
       consumes:
       - application/json
-      description: validate username and password, if user is exists in the database
-        RETURN valid user
+      description: validate username and password with JWT Token to authentication
+        user.
       parameters:
       - description: validate user
         in: body
@@ -175,7 +169,5 @@ paths:
           description: Bad Request
       summary: Show an account
       tags:
-      - GetUser
-schemes:
-- http
+      - LoginUser
 swagger: "2.0"
